k8s/apps/hass/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: hass
  labels:
    name: hass
    pod-security.kubernetes.io/enforce: privileged
