k8s/apps/hass/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: hass
    app.kubernetes.io/name: home-assistant
  name: hass-home-assistant
  namespace: hass
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8123
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: hass
    app.kubernetes.io/name: home-assistant
  sessionAffinity: None
  type: ClusterIP
