k8s/apps/hass/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: hass:networking.k8s.io/Ingress:hass/hass-home-assistant
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.org/websocket-services: hass-home-assistant
    nginx.org/proxy-buffering: "false"
    nginx.org/http2: "false"
    nginx.org/client-max-body-size: "0"
    nginx.org/proxy-connect-timeout: "180"
    nginx.org/proxy-read-timeout: "180"
    nginx.org/proxy-send-timeout: "180"
    gethomepage.dev/app: home-assistant
    gethomepage.dev/description: Smarthome Manager
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: SmartHome
    gethomepage.dev/icon: home-assistant
    gethomepage.dev/name: HomeAssistant
    gethomepage.dev/weight: "0"
    uptimekuma.io/interval: "120"
    uptimekuma.io/monitor: "true"
    uptimekuma.io/name: HASS
    uptimekuma.io/type: http
  labels:
    app.kubernetes.io/instance: hass
    app.kubernetes.io/name: home-assistant
  name: hass-home-assistant
  namespace: hass
spec:
  rules:
    - host: ha.herrington.services
      http:
        paths:
          - backend:
              service:
                name: hass-home-assistant
                port:
                  number: 8123
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ha.herrington.services
      secretName: ha-tls-cert
